minor updates to documentation in the tutorial

--- a/gizmo_tutorial.ipynb
+++ b/gizmo_tutorial.ipynb
@@ -330,7 +330,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# refer to utilities.basic.constant for assumed solar values (Asplund et al 2009) and other constants\n",
+    "# refer to utilities.constant for assumed solar values (Asplund et al 2009) and other constants\n",
     "\n",
     "ut.constant.sun_abundance\n",
     "ut.constant.sun_massfraction"
@@ -1547,7 +1547,7 @@
     "# plot the results\n",
     "element_name = 'fe'\n",
     "\n",
-    "from utilities.basic.binning import BinClass\n",
+    "from utilities.binning import BinClass\n",
     "\n",
     "metallicity_limits = [-1.0, 1.0]\n",
     "Bin = BinClass(metallicity_limits, width=0.01)\n",
@@ -1589,18 +1589,9 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "species_name"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
     "# plot the results\n",
     "\n",
-    "from utilities.basic.binning import BinClass\n",
+    "from utilities.binning import BinClass\n",
     "\n",
     "fe_limits = [-1.5, 1.0]\n",
     "Bin = BinClass(fe_limits, width=0.05)\n",
@@ -1687,7 +1678,7 @@
    "source": [
     "# Lets try this out with the NuGrid data now!\n",
     "\n",
-    "from utilities.basic.binning import BinClass\n",
+    "from utilities.binning import BinClass\n",
     "\n",
     "fig,ax=plt.subplots()\n",
     "fig.set_size_inches(6,4)\n",
@@ -1747,7 +1738,7 @@
   "anaconda-cloud": {},
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.6 64-bit ('base': conda)"
+   "display_name": "Python 3.9.7 64-bit ('base': conda)"
   },
   "language_info": {
    "name": "python",
