Updates from changes to the script.

--- a/minimal_gizmo_tutorial.ipynb
+++ b/minimal_gizmo_tutorial.ipynb
@@ -80,6 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Frequently-used python module\n",
     "import numpy as np"
    ]
   },
@@ -90,6 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plotting options\n",
     "%matplotlib inline\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt"
@@ -102,6 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make the plot itself\n",
     "fig = plt.figure()\n",
     "ax = plt.gca()\n",
     "\n",
@@ -124,18 +127,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a144635b-a463-4e7b-b467-bd4cb17b563a",
-   "metadata": {},
-   "source": [
-    "# A simple image of the galaxy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "660f6a5c-2ed2-4704-9fa0-6777339efb3d",
    "metadata": {},
    "source": [
-    "## Identify particles associated with the main galaxy"
+    "# Identify particles associated with the main galaxy"
    ]
   },
   {
@@ -187,8 +182,8 @@
    "id": "573d05da-6257-45f4-9de5-98352e043992",
    "metadata": {},
    "source": [
-    "## Histogram of coordinates\n",
-    "This is a trick to get a rough image of a galaxy or its surroundings."
+    "# A simple image of the main galaxy\n",
+    "Using a 2D histogram is a trick to get a rough image of a galaxy or its surroundings."
    ]
   },
   {
@@ -200,9 +195,6 @@
    "source": [
     "fig = plt.figure()\n",
     "ax = plt.gca()\n",
-    "\n",
-    "density_bins = np.logspace( -4, 12, 64 )\n",
-    "temperature_bins = np.logspace( 1, 8, 64 )\n",
     "\n",
     "ax.hist2d(\n",
     "    coordinates[:,0][is_in_galaxy],\n",
