--- a/gizmo_tutorial.ipynb
+++ b/gizmo_tutorial.ipynb
@@ -1740,7 +1740,8 @@
    "hash": "563616ea0795551886fedfb6f43611ed89f67b819df42e5edfc6c6ce5ab0ec12"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('base': conda)",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -1753,7 +1754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
