--- a/ElementTracer_Tutorial.ipynb
+++ b/ElementTracer_Tutorial.ipynb
@@ -87,9 +87,9 @@
    "source": [
     "<b>gizmo_model.py</b> (can be found in my repo on github: https://github.com/patelpb96/GizmoElementTracers)\n",
     "\n",
-    "<b>gizmo_agetracer.py</b> (same as above, this one is derived from Andrew's version though. Ideally, at some point, these two will merge. The only major difference is my \"FireYield2\" class, which is built on his class and provides the functionality for altering feedback rates and nucleosynthetic yields.) \n",
+    "<b>gizmo_agetracer.py</b> (same as above, this one is derived from Andrew's version though. Ideally, at some point, these two will merge. The only major differences are my \"FireYield2\" class, which is built on his class and provides the functionality for altering feedback rates and nucleosynthetic yields, and a few global variables) \n",
     "\n",
-    "Here's what my gizmo_analysis folder generally looks like (not every last file, but all the .py ones besides setup.py)\n",
+    "Here's what my gizmo_analysis class/folder generally looks like (not every last file, but all the .py ones besides setup.py)\n",
     "\n",
     "<img src =\"https://i.imgur.com/nriNegs.png\">"
    ]
@@ -101,7 +101,7 @@
    "source": [
     "## 0.0 : Diagnostics, run this to be sure everything is atleast loading in and looks right\n",
     "\n",
-    "Of course, first just see if the libraries are importing. Once they're imported, run the following to test if gizmo_model is working as intended. It will just plot the mass loss rates and nucleosynthetic yields that I've already put into the code, without assuming any progenitor metallicity (Z = 1). \n",
+    "Check to see if the libraries are importing. Once they're imported, run the following to test if gizmo_model is working as intended. It will just plot the mass loss rates and nucleosynthetic yields that I've already put into the code, without assuming any progenitor metallicity (Z = 1). \n",
     "\n",
     "### 0.1 : basic testing of gizmo_model\n",
     "\n",
@@ -143,7 +143,7 @@
    "id": "ec877c5c",
    "metadata": {},
    "source": [
-    "#### Correct result (compare with above):\n",
+    "#### Expected result (compare with above):\n",
     "\n",
     "     Available Elements:\n",
     "     ['metals', 'helium', 'carbon', 'nitrogen', 'oxygen', 'neon', 'magnesium', 'silicon', 'sulfur', 'calcium', 'iron']\n",
@@ -180,14 +180,16 @@
     "\n",
     "rate_wind, ages_wind, d_wind = winds.get_rate_wind()\n",
     "rate_ccsn, ages_ccsn, d_ccsn = ccsn.get_rate_cc()\n",
-    "rate_wdsn, ages_wdsn, d_wdsn = wdsn.get_rate_wd()\n",
-    "rate_wdsn_m, ages_wdsn_m, d_wdsn_m = wdsn_mannucci.get_rate_wd()\n",
+    "rate_wdsn, ages_wdsn, d_wdsn = wdsn.get_rate_wd() # Maoz\n",
+    "rate_wdsn_m, ages_wdsn_m, d_wdsn_m = wdsn_mannucci.get_rate_wd() # Mannucci\n",
     "\n",
     "fig, (ax1) = plt.subplots(1,1, figsize = (12,12))\n",
     "\n",
+    "# code to display age bins, roughly\n",
     "if agebinning == True:\n",
     "    for i in agebins:\n",
     "        ax1.axvline(i, ls = \"-.\", c = 'k', alpha = 0.05)\n",
+    "        \n",
     "ax1.loglog()\n",
     "ax1.plot(ages_wind, rate_wind, lw = 4, c = 'seagreen', label = \"Winds\")\n",
     "ax1.plot(ages_ccsn, rate_ccsn, lw = 4, c = 'orange', label = \"CCSN\")\n",
@@ -265,7 +267,7 @@
    "source": [
     "# 1.0 Loading in an Agetracer Sim and Varying the Rates \n",
     "\n",
-    "Feel free to use my function for loading in a particle dictionary, but of course use whatever method works best for you. "
+    "Feel free to use my function for loading in a particle dictionary, but of course use whatever method works best for you. See gizmo_tutorial.ipynb for more details on this step"
    ]
   },
   {
@@ -376,7 +378,7 @@
    "source": [
     "## 1.1 Sanity Check\n",
     "\n",
-    "The code below should run if you've loaded in a simulation with element tracers. You'll typically see 16 age bins from 1 Myr to 13700 Myr in logspace. Other basic diagnostic information available below."
+    "The code below should run if you've loaded in a simulation with element tracers. You'll typically see 16 age bins (17 points/indices) from 1 Myr to 13700 Myr in logspace. Other basic diagnostic information available below."
    ]
   },
   {
@@ -437,9 +439,19 @@
     "\n",
     "    weights = [0,0,0,0,0,0,0,0,0,0,0,0,0,0]\n",
     "\n",
-    "If a star particle forms and experiences a supernova event 40 Myr after it forms, then the 'weight' of that event is split into some geometric fraction surrounding the star particle. I.e. it may look like:\n",
+    "If a star particle forms and experiences a supernova event 40 Myr after it forms, then the 'weight' of that event is split into some geometric fraction surrounding the star particle.\n",
     "\n",
-    "    weights = [0,0,0.091,0,0,0,0,0,0,0,0,0,0,0]\n",
+    "<img src = \"images/AgeTracer_Weights.png\">\n",
+    "\n",
+    "Based on the age of the star particle ejecting the ejecta, a surrounding gas particle will update its weights-array corresponding to the age at which the star particle experienced an event. \n",
+    "\n",
+    "<img src = \"images/et_weights2.png\">\n",
+    "\n",
+    "So the weights-array may look like this if a star particle experiences a supernova or wind event within the first 6 Myr of its existence, and deposits some ejecta into an adjacent gas cell (values are not drawn from simulation, just illustrative):\n",
+    "\n",
+    "    weights = [0,0.0013,0.091,0,0,0,0,0,0,0,0,0,0,0]\n",
+    "\n",
+    "\n",
     "\n",
     "we can integrate over the assumed mass loss rates and multiply them by the weight to reverse engineer the total ejecta contained within a star, and therefore, the relative abundance of elements within it. \n",
     "\n",
